--- a/_sass/minimal-mistakes/skins/_contrast.scss
+++ b/_sass/minimal-mistakes/skins/_contrast.scss
@@ -6,12 +6,13 @@
 $text-color: #000 !default;
 $muted-text-color: $text-color !default;
 $primary-color: #ff0000 !default;
-$border-color: mix(#fff, $text-color, 75%) !default;
+$border-color: mix(#fff, $text-color, 5%) !default;
 $footer-background-color: #000 !default;
-$link-color: #0000ff !default;
+$link-color: #2b2b2b !default;
+$link-color-hover: mix(#fff, $link-color, 35%) !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
-$navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
+$navicon-link-color-hover: mix(#fff, $text-color, 0%) !default;
 
 /* contrast syntax highlighting (base16) */
 $base00: #000000 !default;
