--- a/_sass/minimal-mistakes/skins/_neon.scss
+++ b/_sass/minimal-mistakes/skins/_neon.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #ffffffe7 !default;
+$background-color: #e6e6e6 !default;
 $text-color: #2b2b2b !default;
 $primary-color: rgba(251, 29, 255, 0.781) !default;//#FA1DFF
 $border-color: mix(#000, $background-color, 20%) !default;
