--- a/_sass/minimal-mistakes/skins/_neon.scss
+++ b/_sass/minimal-mistakes/skins/_neon.scss
@@ -6,7 +6,8 @@
 $background-color: #e6e6e6 !default;
 $text-color: #2b2b2b !default;
 $primary-color: rgba(251, 29, 255, 0.781) !default;//#FA1DFF
-$border-color: mix(#000, $background-color, 20%) !default;
+// $border-color: mix(#000, $background-color, 20%) !default;
+$border-color: $background-color !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
 $form-background-color: mix(#000, $background-color, 15%) !default;
