--- a/_sass/minimal-mistakes/_buttons.scss
+++ b/_sass/minimal-mistakes/_buttons.scss
@@ -30,7 +30,7 @@
 
   /* button colors */
   $buttoncolors:
-  (primary, $primary-color),
+  (primary, $navbar-col),  /// -- Changed!
   (inverse, #fff),
   (light-outline, transparent),
   (success, $success-color),
