--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -90,7 +90,8 @@
       &.current,
       &.current.disabled {
         color: #fff;
-        background: $primary-color;
+        // background: $primary-color;
+        background: #444;
       }
 
       &.disabled {
