--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -40,6 +40,7 @@
   line-height: initial;
   overflow: hidden;
   text-overflow: ellipsis;
+  // border-bottom: 3px dashed;
 
   a::before {
     content: '';
@@ -52,6 +53,16 @@
 
   a + a {
     opacity: 0.5;
+  }
+
+  a:hover{
+    // text-decoration-color:red; 
+    text-decoration-color: $primary-color;
+    text-decoration-line: underline;
+    text-decoration-style:dotted;
+    // border-bottom: 3px red dashed;
+    // color: $text-color;
+
   }
 }
 
