--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -59,7 +59,7 @@
     // text-decoration-color:red; 
     text-decoration-color: $primary-color;
     text-decoration-line: underline;
-    text-decoration-style:dotted;
+    // text-decoration-style:dotted;
     // border-bottom: 3px red dashed;
     // color: $text-color;
 
