--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -37,8 +37,8 @@
 </script>
 {% endif %}
 
-  <!-- src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js" -->
-{% if page.p5js %}
+<!-- src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js" -->
+<!-- {% if page.p5js %}
 <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"
   src="{{site.baseurl}}/assets/js/plugins/p5.min.js">
@@ -48,4 +48,4 @@
 src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/addons/p5.dom.js">
 </script>
 
-{% endif %}
+{% endif %} -->
