--- a/_sass/minimal-mistakes/skins/_neon.scss
+++ b/_sass/minimal-mistakes/skins/_neon.scss
@@ -5,7 +5,7 @@
 /* Colors */
 $background-color: #ffffff !default;
 $text-color: #2b2b2b !default;
-$primary-color: rgba(255, 29, 168, 0.918) !default;//#FA1DFF
+$primary-color: rgb(255, 29, 168) !default;//#FA1DFF
 // $border-color: mix(#000, $background-color, 20%) !default;
 $border-color: $background-color !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
