updated classical-ai..... again

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -52,3 +52,10 @@
 #imp_text{
     text-decoration: underline
 }
+
+#discription{
+    font-size:17px;
+    font-style:italic;
+    font-weight: 600;
+    color: gray;
+}
