--- a/_sass/minimal-mistakes/skins/_neon.scss
+++ b/_sass/minimal-mistakes/skins/_neon.scss
@@ -42,6 +42,8 @@ $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
   color: inherit;
 }
 
+/* Edit */
+
 /* next/previous buttons */
 .pagination--pager {
   color: $text-color;
