--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,23 @@
+:root{
+
+  /* Light Mode */
+  --main-bg-color: #fff;
+  --main-fg-color: #311e3e;
+  --main-text-color: #3e3e40;
+  --main-footer-color: #efefef;
+
+  --main-post-bg-color: #fff;
+
+  /* Dark Mode */
+  /* --main-bg-color: rgb(5, 0, 17);
+  --main-fg-color: white;
+  --main-text-color: white;
+  --main-footer-color: rgb(3, 4, 7);
+
+  --main-post-bg-color: #090618; */
+}
+
+
 .highlight {
   /* background-color: #faf9f9; */
   background-color: #141935;
@@ -780,7 +800,7 @@ html {
 
 body {
   font-family: 'Montserrat', sans-serif;
-  color: #3e3e40;
+  color: var(--main-text-color);
   margin: 0;
   background-color: #fff;
   -webkit-font-smoothing: antialiased;
@@ -790,7 +810,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Lato', sans-serif;
-  color: #311e3e;
+  color: var(--main-fg-color);
   font-weight: 400;
 }
 
@@ -804,11 +824,11 @@ a {
 }
 
 blockquote {
-  border-left: 3px solid #311e3e;
+  border-left: 3px solid var(--main-fg-color);
   padding-left: 18px;
   margin-left: 21px;
   font-style: italic;
-  color: #311e3e;
+  color: var(--main-fg-color);
 }
 
 pre {
@@ -823,6 +843,7 @@ pre code {
 }
 
 .flex-container {
+  background: var(--main-bg-color);
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -893,7 +914,7 @@ pre code {
 .main-header {
   font-family: 'Lato', sans-serif;
   padding: 15px 0;
-  background-color: #fff;
+  background-color: var(--main-bg-color);
   -webkit-box-shadow: 0px -5px 15px rgba(0, 0, 0, 0.3);
           box-shadow: 0px -5px 15px rgba(0, 0, 0, 0.3);
 }
@@ -923,7 +944,7 @@ pre code {
   text-transform: uppercase;
   font-size: 27px;
   font-weight: 300;
-  color: #311e3e;
+  color: var(--main-fg-color);
 }
 
 .main-nav {
@@ -956,7 +977,7 @@ pre code {
   text-transform: uppercase;
   font-weight: 400;
   font-size: 18px;
-  color: #311e3e;
+  color: var(--main-fg-color);
 }
 
 .main-nav ul li a:hover {
@@ -980,7 +1001,7 @@ pre code {
 .search-icon-close {
   cursor: pointer;
   font-size: 18px;
-  color: #311e3e;
+  color: var(--main-fg-color);
   -webkit-transition: all .4s;
   transition: all .4s;
   padding: 10px;
@@ -1026,7 +1047,7 @@ pre code {
   border-bottom: 1px solid #d9d9d9;
   outline: none;
   font-size: 21px;
-  color: #3e3e40;
+  color: var(--main-text-color);
 }
 
 .results-search {
@@ -1045,7 +1066,7 @@ pre code {
 
 .results-search li a {
   text-decoration: none;
-  color: #3e3e40;
+  color: var(--main-text-color);
 }
 
 .results-search li a:hover {
@@ -1160,7 +1181,7 @@ pre code {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 14px;
-  color: #3e3e40;
+  color: var(--main-text-color);
 }
 
 .pagination .previous:hover, .pagination .next:hover {
@@ -1171,12 +1192,12 @@ pre code {
 /* = = = = = = = = = = Footer Styles = = = = = = = = = = */
 .main-footer {
   padding: 15px 0;
-  background-color: #efefef;
+  background-color: var(--main-footer-color);
 }
 
 .main-footer .copyright {
   text-align: center;
-  color: #311e3e;
+  color: var(--main-fg-color);
   font-size: 16px;
 }
 
@@ -1198,7 +1219,7 @@ pre code {
 .page-content {
   margin-top: -80px;
   margin-bottom: 100px;
-  background-color: #fff;
+  background-color: var(--main-post-bg-color);
   padding: 20px;
   -webkit-border-top-left-radius: 20px;
           border-top-left-radius: 20px;
@@ -1219,7 +1240,7 @@ pre code {
   font-size: 36px;
   text-align: center;
   margin: 0 0 20px;
-  color: #311e3e;
+  color: var(--main-fg-color);
 }
 
 .header-page .page-date {
@@ -1240,7 +1261,7 @@ pre code {
 .page-footer .page-share {
   text-transform: uppercase;
   font-size: 12px;
-  color: #311e3e;
+  color: var(--main-fg-color);
 }
 
 .page-footer .page-tag {
@@ -1276,7 +1297,7 @@ pre code {
 .recent-box .recent-title {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
-  color: #311e3e;
+  color: var(--main-fg-color);
   text-align: center;
   margin: 0 0 30px;
 }
@@ -1360,7 +1381,7 @@ pre code {
   padding: 8px 10px;
   width: 100%;
   max-width: 100%;
-  color: #3e3e40;
+  color: var(--main-text-color);
   border: none;
   -webkit-border-radius: 2px;
           border-radius: 2px;
@@ -1377,7 +1398,7 @@ pre code {
   font-size: 14px;
   text-align: center;
   color: #fff;
-  background-color: #311e3e;
+  background-color: var(--main-fg-color);
   vertical-align: baseline;
   cursor: pointer;
   border: none;
@@ -1444,7 +1465,7 @@ pre code {
 
 .author-box .author-desc li a {
   font-size: 18px;
-  color: #3e3e40;
+  color: var(--main-text-color);
 }
 
 .author-box .author-desc li a:hover {
@@ -1480,7 +1501,7 @@ pre code {
   display: block;
   height: 1px;
   width: 80px;
-  background-color: #311e3e;
+  background-color: var(--main-fg-color);
 }
 
 .about-header .author-image-container {
@@ -1493,7 +1514,7 @@ pre code {
 }
 
 .about-header .subtitle {
-  color: #311e3e;
+  color: var(--main-fg-color);
   font-weight: 300;
   margin: 0;
 }
@@ -1543,7 +1564,7 @@ pre code {
   font-size: 36px;
   text-align: center;
   margin: 0 0 30px;
-  color: #311e3e;
+  color: var(--main-fg-color);
 }
 
 .blog-tags .tags {
@@ -1554,7 +1575,7 @@ pre code {
 
 .blog-tags .tags li a {
   display: inline-block;
-  color: #311e3e;
+  color: var(--main-fg-color);
 }
 
 .blog-tags .tags li a:hover {
@@ -1576,7 +1597,7 @@ pre code {
 }
 
 .blog-tags .tag-list small {
-  color: #311e3e;
+  color: var(--main-fg-color);
 }
 
 /* = = = = = = = = = = Animate Styles = = = = = = = = = = */
