--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,7 @@
 :root{
 
+  --main-link-color: #ff1e87;
+
   /* Light Mode */
   --main-bg-color: #fff;
   --main-fg-color: #311e3e;
@@ -9,12 +11,15 @@
   --main-post-bg-color: #fff;
 
   /* Dark Mode */
-  /* --main-bg-color: rgb(5, 0, 17);
-  --main-fg-color: white;
+  /* --main-bg-color: rgb(5, 0, 17); */
+  /* --main-bg-color: linear-gradient(#323B5C, #2F2E54); */
+  
+  /* --main-fg-color: white;
   --main-text-color: white;
   --main-footer-color: rgb(3, 4, 7);
 
   --main-post-bg-color: #090618; */
+  /* --main-post-bg-color: #2F3754; */
 }
 
 
@@ -27,7 +32,7 @@
 }
 
 .highlighter-rouge {
-  color: #87314e;
+  color: var(--main-link-color);
   font-weight: 400;
   border: 1px solid #607D8B;
   -webkit-border-radius: 3px;
@@ -820,7 +825,7 @@ img {
 }
 
 a {
-  color: #87314e;
+  color: var(--main-link-color);
 }
 
 blockquote {
@@ -982,7 +987,7 @@ pre code {
 
 .main-nav ul li a:hover {
   opacity: .8;
-  color: #87314e;
+  color: var(--main-link-color);
 }
 
 .menu-icon-container {
@@ -1070,7 +1075,7 @@ pre code {
 }
 
 .results-search li a:hover {
-  color: #87314e;
+  color: var(--main-link-color);
   opacity: .8;
 }
 
@@ -1186,7 +1191,7 @@ pre code {
 
 .pagination .previous:hover, .pagination .next:hover {
   opacity: .8;
-  color: #87314e;
+  color: var(--main-link-color);
 }
 
 /* = = = = = = = = = = Footer Styles = = = = = = = = = = */
@@ -1199,6 +1204,11 @@ pre code {
   text-align: center;
   color: var(--main-fg-color);
   font-size: 16px;
+}
+
+.main-footer .copyright a{
+  color: var(--main-fg-color);
+  text-decoration-line: none;
 }
 
 /* = = = = = = = = = = Post-Page Styles = = = = = = = = = = */
@@ -1270,7 +1280,7 @@ pre code {
 
 .page-footer .page-tag a {
   text-decoration: none;
-  color: #87314e;
+  color: var(--main-link-color);
 }
 
 .page-footer .page-tag a:hover {
@@ -1410,7 +1420,7 @@ pre code {
 }
 
 .newsletter .newsletter-box .subscribe-btn:hover {
-  background-color: #87314e;
+  background-color: var(--main-link-color);
 }
 
 /* = = = = = = = = = = Author Box Styles = = = = = = = = = = */
@@ -1546,7 +1556,7 @@ pre code {
 }
 
 .about-body .contact-list li a:hover {
-  color: #87314e;
+  color: var(--main-link-color);
   -webkit-transform: scale(1.3);
       -ms-transform: scale(1.3);
           transform: scale(1.3);
@@ -1584,7 +1594,7 @@ pre code {
 
 .blog-tags .tag-list span a {
   display: inline-block;
-  color: #87314e;
+  color: var(--main-link-color);
   text-decoration: none;
   text-transform: uppercase;
   font-size: 12px;
@@ -1750,7 +1760,7 @@ pre code {
     transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82);
   }
   .about-body .contact-list li a:hover {
-    color: #87314e;
+    color: var(--main-link-color);
     -webkit-transform: scale(1.3);
         -ms-transform: scale(1.3);
             transform: scale(1.3);
