added new post on optimization and lagrange multipliers

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,4 +17,9 @@
       </div>
     </div>
   </div>
+
+
+  <!-- including plotlyjs -->
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 </header> <!-- End Header -->
