--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
   {% include header.html %}
 
   <!-- including mathjax -->
-    <script type="text/x-mathjax-config">
+    <script async type="text/x-mathjax-config">
     MathJax.Hub.Config({
       extensions: [
         "MathMenu.js",
@@ -30,6 +30,8 @@ layout: default
 
   <!-- inculding p5js -->
   <script type="text/javascript"  src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
+
+
 
   <article class="article-page">
     <div class="page-image">
