--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,8 +24,8 @@
 
 
 .highlight {
-  /* background-color: #faf9f9; */
-  background-color: #141935;
+  background-color: #faf9f9;
+  /* background-color: #141935; */
   -webkit-border-radius: 3px;
           border-radius: 3px;
   margin: 0;
